--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -70,4 +70,10 @@
       </div>
     </div>
   <% end %>
+
+  <!-- ページネーションリンク -->
+  <div class="text-center">
+    <%= paginate @posts %>
+  </div>
+
 </div>
