--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -24,6 +24,9 @@
           <% end %>
         </tbody>
       </table>
+      
+      <!-- ページネーションのリンク -->
+      <%= paginate @comments %>
     </div>
   </div>
 </div>
